--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 __pycache__/
 .pytest_cache/
 config/config.conf
+config/config.yaml
 ToDo 
 snip*.py
 venv
-testMagnets.txt
+.venv
+temp
+.notebooks
+**/old/
