--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -2,8 +2,12 @@
 requests==2.32.3
 asyncio==3.4.3
 python-dateutil==2.8.2
-verboselogs==1.7
 pytest==8.0.1
 pytest-asyncio==0.23.5
 pre-commit==3.8.0
 black==24.8.0
+pylint==3.3.3
+autoflake==2.3.1
+isort==5.13.2
+envyaml==1.10.211231
+demjson3==3.0.6
