--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,13 +63,13 @@ jobs:
           fetch-depth: '0'
 
       - name: Bump version and push tag
-        if: ${{ github.ref_name == 'stable' }}
+        if: ${{ github.ref_name == 'latest' }}
         id: setversion
         uses: anothrNick/github-tag-action@1.36.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           WITH_V: true
-          RELEASE_BRANCHES: stable
+          RELEASE_BRANCHES: latest
          
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -96,7 +96,7 @@ jobs:
           BRANCH_NAME="${{ github.ref_name }}"
           if [[ "$BRANCH_NAME" == "dev" ]]; then
             IMAGE_TAG="dev"
-          elif [[ "$BRANCH_NAME" == "stable" ]]; then
+          elif [[ "$BRANCH_NAME" == "latest" ]]; then
             IMAGE_TAG=${{ steps.setversion.outputs.new_tag }}
           else
             IMAGE_TAG=$BRANCH_NAME
@@ -116,7 +116,7 @@ jobs:
         run: |
           BRANCH_NAME="${{ github.ref_name }}"
           TAG_LATEST=""
-          if [[ "$BRANCH_NAME" == "stable" ]]; then
+          if [[ "$BRANCH_NAME" == "latest" ]]; then
             TAG_LATEST="-t $IMAGE_NAME:latest"
           fi
 
