--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -36,6 +36,9 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY main.py main.py
 COPY src src
 
+HEALTHCHECK --interval=30s --timeout=5s --start-period=10s --retries=3 \
+  CMD pgrep -f main.py || exit 1
+  
 CMD ["python", "main.py"]
 
 # For debugging:
