--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -36,9 +36,13 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY main.py main.py
 COPY src src
 
+
+# Install health check
+RUN apt-get update && apt-get install -y --no-install-recommends procps && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
 HEALTHCHECK --interval=30s --timeout=5s --start-period=10s --retries=3 \
   CMD pgrep -f main.py || exit 1
-  
+
 CMD ["python", "main.py"]
 
 # For debugging:
