Typo fix in examples

--- a/config/config_example.yaml
+++ b/config/config_example.yaml
@@ -20,9 +20,9 @@ jobs:
   remove_failed_downloads:
   remove_failed_imports:
     message_patterns:
-      - Not a Custom Format upgrade for existing*
-      - Not an upgrade for existing*
-      # - \*Found potentially dangerous file with extension*
+      - "Not a Custom Format upgrade for existing*"
+      - "Not an upgrade for existing*"
+      - "*Found potentially dangerous file with extension*"
   remove_metadata_missing:
     # max_strikes: 3
   remove_missing_files:
